Update 02 - Rock and Mineral Clubs.ipynb

--- a/homework_08/02 - Rock and Mineral Clubs.ipynb
+++ b/homework_08/02 - Rock and Mineral Clubs.ipynb
@@ -1840,7 +1840,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"cleaned_clubs.csv\", index=False)"
+    "df.to_csv(\"rock-clubs.csv\", index=False)"
    ]
   },
   {
