Update 01 - North Korean News.ipynb

--- a/homework_08/North Korean News/01 - North Korean News.ipynb
+++ b/homework_08/North Korean News/01 - North Korean News.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "'경애하는 최고령도자 김정은동지께 미합중국 대통령이 친서를 보내여왔다'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "'fn_showArticle(\"AR0126460\", \"\", \"NT00\", \"L\")'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "'\"AR0126460\"'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,22 +110,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'조선문화전람회 중국에서 진행'"
+       "'김정은동지의 로작을 로므니아에서 출판'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "doc.find('div', attrs={\"id\" : \"article_area\"}).find('h4').find(class_=\"titlebet\").text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'경애하는 최고령도자동지의 혁명활동\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n경애하는 최고령도자 김정은동지께 미합중국 대통령이 친서를 보내여왔다\\xa0\\n\\n우리 나라를 국가방문한 중국공산당 중앙위원회 총서기,중화인민공화국 주석 평양을 출발--경애하는 최고령도자 김정은동지께서 습근평동지를 따뜻이 환송하시였다\\xa0\\n\\n경애하는 최고령도자 김정은동지께서 습근평동지와 팽려원녀사를 위하여 오찬을 마련하시였다\\xa0\\n\\n\\n중국공산당 중앙위원회 총서기,중화인민공화국 주석 습근평동지 우의탑에 꽃바구니 진정\\xa0\\n\\n경애하는 최고령도자 김정은동지께서와 습근평동지께서 조선로동당 중앙위원회 본부청사에서 당중앙위원회 정치국 성원들과 함께 기념촬영을 하시였다\\xa0\\n\\n경애하는 최고령도자 김정은동지께서 습근평동지와 함께 대집단체조와 예술공연 《불패의 사회주의》를 관람하시였다'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.find('div', attrs={\"style\" : \"background:#FFFFFF\"}).text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n김정은동지의 로작을 로므니아에서 출판'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.find('div', attrs={\"id\" : \"article_area\"}).find(\"h4\").text"
    ]
   },
   {
