--- a/homework_04/03 - Last FM API (Music).ipynb
+++ b/homework_04/03 - Last FM API (Music).ipynb
@@ -118,31 +118,12 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'bbd5fb082a774153315ccc3eba82d133'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "os.getenv('LAST_API_KEY')\n",
+    "LAST_API_KEY = os.getenv('LAST_API_KEY')\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2) Save your API key\n",
-    "LASTFM_API_KEY =bbd5fb082a774153315ccc3eba82d133\n"
    ]
   },
   {
@@ -244,36 +225,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lil' Wayne has 3248027 listeners\n",
-      "Lily Allen has 2178803 listeners\n",
-      "LIL PEEP has 223066 listeners\n",
-      "LIL UZI VERT has 310985 listeners\n",
-      "Lil B has 220116 listeners\n",
-      "LIL PUMP has 210828 listeners\n",
-      "Lil Yachty has 166359 listeners\n",
-      "Lilly Wood & The Prick has 401319 listeners\n",
-      "Lil Baby has 127425 listeners\n",
-      "Lil Ugly Mane has 62000 listeners\n",
-      "lil skies has 101659 listeners\n",
-      "Lil' Kim has 463945 listeners\n",
-      "Lil Dicky has 205205 listeners\n",
-      "Lil Nas X has 163822 listeners\n",
-      "Lil Jon has 606628 listeners\n",
-      "Lil Jon & The East Side Boyz has 503817 listeners\n",
-      "Lil Xan has 105449 listeners\n",
-      "Lil Boosie has 419856 listeners\n",
-      "Lila Downs has 164206 listeners\n",
-      "The Tiger Lillies has 112503 listeners\n",
-      "Lil Wyte has 259424 listeners\n",
-      "Lil Durk has 75285 listeners\n",
-      "Birdman & Lil' Wayne has 586059 listeners\n",
-      "lil Mosey has 54993 listeners\n",
-      "Lil' Flip has 331524 listeners\n",
-      "Lil' Kleine has 51981 listeners\n",
-      "Spangle call Lilli line has 37515 listeners\n",
-      "Lily & Madeleine has 127895 listeners\n",
-      "Lillasyster has 51018 listeners\n",
-      "The Lillingtons has 41043 listeners\n"
+      "Lil' Wayne has 3253223 listeners\n",
+      "Lily Allen has 2182629 listeners\n",
+      "LIL PEEP has 227935 listeners\n",
+      "LIL UZI VERT has 316998 listeners\n",
+      "Lil B has 220893 listeners\n",
+      "LIL PUMP has 213537 listeners\n",
+      "Lil Yachty has 169444 listeners\n",
+      "Lil Baby has 131265 listeners\n",
+      "Lilly Wood & The Prick has 403751 listeners\n",
+      "Lil Ugly Mane has 63184 listeners\n",
+      "Lil Nas X has 198204 listeners\n",
+      "lil skies has 104906 listeners\n",
+      "Lil Dicky has 208339 listeners\n",
+      "Lil' Kim has 465123 listeners\n",
+      "Lil Jon has 607293 listeners\n",
+      "Lil Jon & The East Side Boyz has 504535 listeners\n",
+      "Lil Xan has 107138 listeners\n",
+      "Lil Boosie has 419867 listeners\n",
+      "Lila Downs has 164466 listeners\n",
+      "The Tiger Lillies has 112613 listeners\n",
+      "Lil Durk has 76252 listeners\n",
+      "Lil Wyte has 259576 listeners\n",
+      "lil Mosey has 58152 listeners\n",
+      "Birdman & Lil' Wayne has 586084 listeners\n",
+      "Lil' Flip has 331853 listeners\n",
+      "Lil' Kleine has 52925 listeners\n",
+      "Lily & Madeleine has 128246 listeners\n",
+      "Spangle call Lilli line has 37758 listeners\n",
+      "Lillasyster has 51123 listeners\n",
+      "The Lillingtons has 41280 listeners\n"
      ]
     }
    ],
@@ -320,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['3248027', '2178803', '223066', '310985', '220116', '210828', '166359', '401319', '127425', '62000', '101659', '463945', '205205', '163822', '606628', '503817', '105449', '419856', '164206', '112503', '259424', '75285', '586059', '54993', '331524', '51981', '37515', '127895', '51018', '41043']\n"
+      "['3253223', '2182629', '227935', '316998', '220893', '213537', '169444', '131265', '403751', '63184', '198204', '104906', '208339', '465123', '607293', '504535', '107138', '419867', '164466', '112613', '76252', '259576', '58152', '586084', '331853', '52925', '128246', '37758', '51123', '41280']\n"
      ]
     }
    ],
@@ -338,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total listeners of artists with lil in their names 11612755\n"
+      "total listeners of artists with lil in their names 11698592\n"
      ]
     }
    ],
@@ -647,18 +628,18 @@
       "1550f952-c91b-40d7-9b4d-d26a259ee932\n",
       "1b72331b-3a97-4981-a81c-eeee9c275d28\n",
       "5f1adfe1-4d07-4141-b181-79e5d379d539\n",
-      "bc1b5c95-e6d6-46b5-957a-5e8908b02c1e\n",
       "3268f062-6e76-480a-a384-e1dd2a276afb\n",
+      "bc1b5c95-e6d6-46b5-957a-5e8908b02c1e\n",
       "a95384b1-6aec-468c-ae0d-8c6daf87c4c2\n",
       "243c6f61-d83b-4459-bebd-5899df0da111\n",
       "8ba17cf6-bec2-4ae4-9820-b1cda47adc08\n",
       "ad29ae1c-2eda-4071-9dc8-31910e7e546c\n",
       "3ad4f6ec-253f-4050-8849-ca26266edfb8\n",
-      "9b5ce0c1-1bc0-4ea2-a8d3-f5ee7af9eda8\n",
       "c9cd225b-4883-428e-82c2-73e0b6282fb6\n",
+      "9b5ce0c1-1bc0-4ea2-a8d3-f5ee7af9eda8\n",
       "981d39fc-bd00-4cc6-ac67-6410f8b89098\n",
-      "bc21df5c-3d79-479b-b638-8ddb5ecea403\n",
       "b89f4c50-72f5-48ce-b08c-a643b191b24f\n",
+      "bc21df5c-3d79-479b-b638-8ddb5ecea403\n",
       "9acaf734-b380-4c48-954c-a2cf1d7990a9\n",
       "9803d120-716d-45ba-9eb7-9a120813f908\n"
      ]
@@ -689,7 +670,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['6e0c7c0e-cba5-4c2c-a652-38f71ef5785d', '1550f952-c91b-40d7-9b4d-d26a259ee932', '1b72331b-3a97-4981-a81c-eeee9c275d28', '5f1adfe1-4d07-4141-b181-79e5d379d539', 'bc1b5c95-e6d6-46b5-957a-5e8908b02c1e', '3268f062-6e76-480a-a384-e1dd2a276afb', 'a95384b1-6aec-468c-ae0d-8c6daf87c4c2', '243c6f61-d83b-4459-bebd-5899df0da111', '8ba17cf6-bec2-4ae4-9820-b1cda47adc08', 'ad29ae1c-2eda-4071-9dc8-31910e7e546c', '3ad4f6ec-253f-4050-8849-ca26266edfb8', '9b5ce0c1-1bc0-4ea2-a8d3-f5ee7af9eda8', 'c9cd225b-4883-428e-82c2-73e0b6282fb6', '981d39fc-bd00-4cc6-ac67-6410f8b89098', 'bc21df5c-3d79-479b-b638-8ddb5ecea403', 'b89f4c50-72f5-48ce-b08c-a643b191b24f', '9acaf734-b380-4c48-954c-a2cf1d7990a9', '9803d120-716d-45ba-9eb7-9a120813f908']\n"
+      "['6e0c7c0e-cba5-4c2c-a652-38f71ef5785d', '1550f952-c91b-40d7-9b4d-d26a259ee932', '1b72331b-3a97-4981-a81c-eeee9c275d28', '5f1adfe1-4d07-4141-b181-79e5d379d539', '3268f062-6e76-480a-a384-e1dd2a276afb', 'bc1b5c95-e6d6-46b5-957a-5e8908b02c1e', 'a95384b1-6aec-468c-ae0d-8c6daf87c4c2', '243c6f61-d83b-4459-bebd-5899df0da111', '8ba17cf6-bec2-4ae4-9820-b1cda47adc08', 'ad29ae1c-2eda-4071-9dc8-31910e7e546c', '3ad4f6ec-253f-4050-8849-ca26266edfb8', 'c9cd225b-4883-428e-82c2-73e0b6282fb6', '9b5ce0c1-1bc0-4ea2-a8d3-f5ee7af9eda8', '981d39fc-bd00-4cc6-ac67-6410f8b89098', 'b89f4c50-72f5-48ce-b08c-a643b191b24f', 'bc21df5c-3d79-479b-b638-8ddb5ecea403', '9acaf734-b380-4c48-954c-a2cf1d7990a9', '9803d120-716d-45ba-9eb7-9a120813f908']\n"
      ]
     }
    ],
@@ -716,37 +697,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=6e0c7c0e-cba5-4c2c-a652-38f71ef5785d\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=1550f952-c91b-40d7-9b4d-d26a259ee932\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=1b72331b-3a97-4981-a81c-eeee9c275d28\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=5f1adfe1-4d07-4141-b181-79e5d379d539\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=bc1b5c95-e6d6-46b5-957a-5e8908b02c1e\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=3268f062-6e76-480a-a384-e1dd2a276afb\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=a95384b1-6aec-468c-ae0d-8c6daf87c4c2\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=243c6f61-d83b-4459-bebd-5899df0da111\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=8ba17cf6-bec2-4ae4-9820-b1cda47adc08\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=ad29ae1c-2eda-4071-9dc8-31910e7e546c\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=3ad4f6ec-253f-4050-8849-ca26266edfb8\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=9b5ce0c1-1bc0-4ea2-a8d3-f5ee7af9eda8\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=c9cd225b-4883-428e-82c2-73e0b6282fb6\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=981d39fc-bd00-4cc6-ac67-6410f8b89098\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=bc21df5c-3d79-479b-b638-8ddb5ecea403\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=b89f4c50-72f5-48ce-b08c-a643b191b24f\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=9acaf734-b380-4c48-954c-a2cf1d7990a9\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=bbd5fb082a774153315ccc3eba82d133&format=json&mbid=9803d120-716d-45ba-9eb7-9a120813f908\n"
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=6e0c7c0e-cba5-4c2c-a652-38f71ef5785d\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=1550f952-c91b-40d7-9b4d-d26a259ee932\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=1b72331b-3a97-4981-a81c-eeee9c275d28\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=5f1adfe1-4d07-4141-b181-79e5d379d539\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=3268f062-6e76-480a-a384-e1dd2a276afb\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=bc1b5c95-e6d6-46b5-957a-5e8908b02c1e\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=a95384b1-6aec-468c-ae0d-8c6daf87c4c2\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=243c6f61-d83b-4459-bebd-5899df0da111\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=8ba17cf6-bec2-4ae4-9820-b1cda47adc08\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=ad29ae1c-2eda-4071-9dc8-31910e7e546c\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=3ad4f6ec-253f-4050-8849-ca26266edfb8\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=c9cd225b-4883-428e-82c2-73e0b6282fb6\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=9b5ce0c1-1bc0-4ea2-a8d3-f5ee7af9eda8\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=981d39fc-bd00-4cc6-ac67-6410f8b89098\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=b89f4c50-72f5-48ce-b08c-a643b191b24f\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=bc21df5c-3d79-479b-b638-8ddb5ecea403\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=9acaf734-b380-4c48-954c-a2cf1d7990a9\n",
+      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid=9803d120-716d-45ba-9eb7-9a120813f908\n"
      ]
     }
    ],
    "source": [
     "for mbid in mbids:\n",
-    "        print(f'http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key={LAST_API_KEY}&format=json&mbid={mbid}')\n",
+    "        print(f'http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=LAST_API_KEY&format=json&mbid={mbid}')\n",
     "    \n",
     "    "
    ]
@@ -963,9 +944,9 @@
       "Yes, this is a rapper!\n",
       "Artist: Lil Ugly Mane\n",
       "Yes, this is a rapper!\n",
-      "Artist: Lil' Kim\n",
-      "Yes, this is a rapper!\n",
       "Artist: Lil Dicky\n",
+      "Yes, this is a rapper!\n",
+      "Artist: Lil' Kim\n",
       "Yes, this is a rapper!\n",
       "Artist: Lil Jon\n",
       "Yes, this is a rapper!\n",
