--- a/homework_10/homework_10_Darksky.ipynb
+++ b/homework_10/homework_10_Darksky.ipynb
@@ -284,7 +284,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# requests.post(\n",
+    "#     \"https://api.mailgun.net/v3/sandbox92a9a7d9e58b463a85fc7b230ecafe08/messages\",\n",
+    "#     auth=(\"api\", MAILGUN_KEY),\n",
+    "#     files=[(\"attachment\")]\n",
+    "#     data={\"from\": \"Excited User <mailgun@sandbox92a9a7d9e58b463a85fc7b230ecafe08>\",\n",
+    "#             \"to\": [\"shb2145@columbia.edu\"],\n",
+    "#             \"subject\": \"subject_line\",\n",
+    "#             \"text\": \"weather_update\"})"
+   ]
   },
   {
    "cell_type": "code",
