--- a/homework_08/School Board Minutes/03 - School Board Minutes.ipynb
+++ b/homework_08/School Board Minutes/03 - School Board Minutes.ipynb
@@ -580,9 +580,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/suhailbhat/desktop/2018pdfs/6.4.19_minutes.pdf'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-84d8a77e3018>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mlink\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'http://www.mineral.k12.nv.us'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0murls\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mbook_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/Users/suhailbhat/desktop/2018pdfs/\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlink\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbook_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mbook\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlink\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstream\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/suhailbhat/desktop/2018pdfs/6.4.19_minutes.pdf'"
+     ]
+    }
+   ],
    "source": [
     "for urls in df['Link']:\n",
     "    link = 'http://www.mineral.k12.nv.us' + urls\n",
@@ -599,62 +611,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['6.4.19_minutes.pdf',\n",
-       " '5.28.19_minutes.pdf',\n",
-       " '5.7.19_minutes.pdf',\n",
-       " '4.23.19_minutes.pdf',\n",
-       " '4.8.19_minutes.pdf',\n",
-       " '3.5.19_minutes.pdf',\n",
-       " '3.5.19.pdf',\n",
-       " '2.26.19_minutes.pdf',\n",
-       " '2.5.19_minutes.pdf',\n",
-       " 'January_22_minutes.pdf',\n",
-       " 'January_8_minutes.pdf',\n",
-       " '12.20.18_minutes.pdf',\n",
-       " '12.4.18_minutes.pdf',\n",
-       " '11.20.18.pdf',\n",
-       " '9.25.18_minutes.pdf',\n",
-       " '9.13.18_minutes.pdf',\n",
-       " '9.4.18.pdf',\n",
-       " '8.21.18_minutes.pdf',\n",
-       " '8.7.18_minutes.pdf',\n",
-       " '7.24.18_minutes.pdf',\n",
-       " '7.10.18_minutes.pdf',\n",
-       " '6.28.18.pdf',\n",
-       " '6.22.18_minutes.pdf',\n",
-       " '6.21.18.pdf',\n",
-       " '6.19.18_minutes.pdf',\n",
-       " '5.29.18_minutes.pdf',\n",
-       " '4.17.18.pdf',\n",
-       " 'april_2,_2018_minutes.pdf',\n",
-       " '3.8.18.pdf',\n",
-       " 'march_6,_2018_minutes.pdf',\n",
-       " 'feb_20,_2108_minutes.pdf',\n",
-       " '2.6.18_minutes.pdf',\n",
-       " 'january_16,_2018_minutes.pdf',\n",
-       " '2.6.18_minutes.pdf',\n",
-       " '1.5.17_minutes.pdf',\n",
-       " '1.26.17_minutes.pdf',\n",
-       " '2.2.17_minutes.pdf',\n",
-       " '2.16.17_minutes.pdf',\n",
-       " '3.2.17__minutes.pdf',\n",
-       " '3.16.17_minutes.pdf',\n",
-       " '4.12.17_minutes.pdf',\n",
-       " '5.1.17_Minutes.pdf',\n",
-       " '5.4.17_minutes.pdf']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pdf_names = [url.split('/')[-1] for url in df['Link']]\n",
     "pdf_names"
@@ -662,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,12 +631,13 @@
     "    input1 = folder + name\n",
     "    txt_name = name.replace(\".pdf\",\".txt\")\n",
     "    output1 = folder + txt_name\n",
-    "    os.system(\"pdftotext '%s' '%s'\" % (input1, output1))"
+    "    os.system(\"pdftotext '%s' '%s'\" % (input1, output1))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,20 +657,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\x0c\\x0c\\x0c'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sample_transcript"
    ]
